base/ingress/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik.lan`)
      middlewares:
        - name: default-headers
      services:
        - kind: TraefikService
          name: api@internal
